Move category of plug-ins to /community/

--- a/de.bund.bfr.knime.foodprocess.pcml/plugin.xml
+++ b/de.bund.bfr.knime.foodprocess.pcml/plugin.xml
@@ -17,8 +17,8 @@
 </extension>
   
 <extension point="org.knime.workbench.repository.nodes">
-	<node category-path="/foodprocess" factory-class="de.bund.bfr.knime.pcml.node.pcmltotable.PCMLToDataTableNodeFactory" />
-	<node category-path="/foodprocess" factory-class="de.bund.bfr.knime.pcml.node.xls2pcml.XLS2PCMLNodeFactory" />
+	<node category-path="/community/foodprocess" factory-class="de.bund.bfr.knime.pcml.node.pcmltotable.PCMLToDataTableNodeFactory" />
+	<node category-path="/community/foodprocess" factory-class="de.bund.bfr.knime.pcml.node.xls2pcml.XLS2PCMLNodeFactory" />
 </extension>
    
 </plugin>
