--- a/de.bund.bfr.knime.foodprocess.view/plugin.xml
+++ b/de.bund.bfr.knime.foodprocess.view/plugin.xml
@@ -3,7 +3,7 @@
 <plugin>
  
    <extension point="org.knime.workbench.repository.nodes">
-      <node category-path="/foodprocess" factory-class="de.bund.bfr.knime.foodprocess.view.ViewNodeFactory" />
+      <node category-path="/community/foodprocess" factory-class="de.bund.bfr.knime.foodprocess.view.ViewNodeFactory" />
    </extension>
    
 </plugin>
