Migrate to KNIME 4.7

--- a/de.bund.bfr.knime.pmm.common/build.properties
+++ b/de.bund.bfr.knime.pmm.common/build.properties
@@ -2,5 +2,6 @@ javacDefaultEncoding.. = UTF-8
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/jcalendar-1.4.jar
+               lib/jcalendar-1.4.jar,\
+               lib/jfreechart-1.0.11.jar
 source.. = src/
