--- a/de.bund.bfr.knime.testflows/build.properties
+++ b/de.bund.bfr.knime.testflows/build.properties
@@ -1,4 +1,5 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               org.knime.testing.application-4.5.0.v202107261004.jar
