added filetype_blacklist.csv to binary.includes

--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -15,6 +15,7 @@ bin.includes = META-INF/,\
                libs/batik-util-1.7.jar,\
                js-src/,\
                data/convertToJsonSerializable.py,\
-               libs/vocabularies-2.0.0.jar
+               libs/vocabularies-2.0.0.jar,\
+               data/filetype_blacklist.csv
 source.. = src/
            output.. = bin/
