--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -16,6 +16,7 @@ bin.includes = META-INF/,\
                js-src/,\
                data/convertToJsonSerializable.py,\
                libs/vocabularies-2.0.0.jar,\
-               libs/jackson-module-jsonschema-2.2.1.jar
+               libs/jackson-module-jsonschema-2.2.1.jar,\
+               data/filetype_blacklist.csv
 source.. = src/
            output.. = bin/
