--- a/.github/workflows/build_development.yml
+++ b/.github/workflows/build_development.yml
@@ -3,7 +3,7 @@ name: Java CI
 on: 
   push:
     branches:
-      - knime_4_5
+      - gitlab_version_info
 
 jobs:
   build:
@@ -27,7 +27,7 @@ jobs:
       - name: Deploy to GITLAB
         env:
            GITLAB_NAME: ${{ secrets.GITLAB_USER }}
-           GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+           GITLAB_TOKEN: ${{ secrets.GITLAB_TRIGGER_TOKEN }}
            GITLAB_EMAIL: ${{ secrets.GITLAB_EMAIL }}
         shell: bash
         run: |
