--- a/de.bund.bfr.knime.pmm.nodes.tests/pom.xml
+++ b/de.bund.bfr.knime.pmm.nodes.tests/pom.xml
@@ -30,6 +30,16 @@
 					</dependency-resolution>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 </project>
