--- a/de.bund.bfr.knime.pmm.common/build.properties
+++ b/de.bund.bfr.knime.pmm.common/build.properties
@@ -2,6 +2,5 @@ javacDefaultEncoding.. = UTF-8
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/jcalendar-1.4.jar,\
-               lib/jdom2-2.0.6.1.jar
+               lib/jcalendar-1.4.jar
 source.. = src/
