applied the changes from commit b6bd872 (jdom) to 5.1 (KNIME)

--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -15,7 +15,6 @@ bin.includes = META-INF/,\
                data/convertToJsonSerializable.py,\
                libs/vocabularies-2.0.0.jar,\
                libs/jackson-module-jsonschema-2.2.1.jar,\
-               data/filetype_blacklist.csv,\
-               libs/jdom2-2.0.6.jar
+               data/filetype_blacklist.csv
 source.. = src/
            output.. = bin/
