--- a/de.bund.bfr.knime.fsklab.deprecatednodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.deprecatednodes/build.properties
@@ -15,5 +15,4 @@ bin.includes = META-INF/,\
                sedml_libs/jmathml-2.2.1.jar,\
                sedml_libs/xom-1.2.5.jar,\
                js-lib/,\
-               js-src/,\
-               libs/jdom2-2.0.6.jar
+               js-src/
