Add Python packages to package.json

--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="libs/fskml-1.0.14-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/fskml-1.0.14.jar" sourcepath="libs/fskml-1.0.14-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jackson-module-jsonschema-2.2.1.jar"/>
 	<classpathentry kind="lib" path="libs/jhdf-0.5.11.jar"/>
 	<classpathentry kind="lib" path="libs/batik-svg-dom.jar"/>
@@ -15,7 +17,6 @@
 	<classpathentry kind="lib" path="sedml_libs/xom-1.2.5.jar"/>
 	<classpathentry kind="lib" path="libs/vocabularies-2.0.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="libs/fskml-1.0.13.jar" sourcepath="libs/fskml-1.0.13-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
